--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "electron-update-test",
-  "productName": "electron-update-test",
-  "version": "1.0.0",
-  "description": "My Electron application description",
-  "repository": "https://github.com/felixrieseberg/electron-update-test",
+  "name": "smorgasbord",
+  "productName": "Smorgasbord",
+  "version": "0.1.0",
+  "description": "A local update server for Squirrel & Electron",
+  "repository": "https://github.com/felixrieseberg/squirel-smorgasboard",
   "main": "./dist/main/main",
   "scripts": {
     "start": "electron-forge start",
@@ -39,8 +39,6 @@
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.17",
-    "@electron-forge/maker-deb": "^6.0.0-beta.17",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.17",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.17",
     "@electron-forge/maker-zip": "^6.0.0-beta.17",
     "@types/builtin-modules": "^2.0.0",
